pod.yml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    sidecar.istio.io/inject: "true"
  labels:
    app: hello-grpc
  name: hello-grpc
spec:
  containers:
  - image: ericbottard/hello-grpc:latest
    name: hello-grpc
    ports:
    - name: unused-by-name
      containerPort: 8080
