service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-grpc-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: hello-grpc
